# mailgram

./: .gitignore  CMakeLists.txt  conanfile.txt
src/: CMakeLists.txt  main.cpp  server.hpp  session.cpp  session.hpp  text.hpp
tests/: testing.py
